Redefined bra and ket in terms of DeclarePairedDelimiterX from mathtools. Also went back to previous spacing (I am not satisfied with the spacing either way, at least when using Kpfonts, but this seems to be the lesser of two evils).

--- a/quantum_mechanics_macros.tex
+++ b/quantum_mechanics_macros.tex
@@ -28,12 +28,10 @@
 % =====================================================
 
 % Bra. Use starred versions for automatic resizing.
-\newcommand{\bra}[1]{\mathinner {\langle #1\,\rvert}}
-\WithSuffix\newcommand\bra*[1]{\mathinner {\left\langle #1\,\right|}}
+\DeclarePairedDelimiterX{\bra}[1]{\langle}{\rvert}{#1}
 
 % Ket
-\newcommand{\ket}[1]{\mathinner {\lvert \,{#1}\rangle}}
-\WithSuffix\newcommand\ket*[1]{\mathinner {\left| \,{#1}\right\rangle}}
+\DeclarePairedDelimiterX{\ket}[1]{\lvert}{\rangle}{#1}
 
 % Braket. Takes two arguments.
 \DeclarePairedDelimiterX{\braket}[2]{\langle}{\rangle}{
